--- a/WEBSITE.html
+++ b/WEBSITE.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+
+<html>
+
+<head>
+	<title>Grayson</title>
+	<style>
+		h1 {
+		color: green;
+		}
+	</style>
+</head>
+
+
+<body>
+
 <h1>Grayson</h1>
 
 <p>Hey, I'm Grayson. I like playing video games.I also really
@@ -10,7 +26,7 @@ Lord Byng. I am currently in Computer Studies 10.</p>
 <ul>
 	<li>Video Games</li>
 	<li>Dogs</li>
-	<li>Led Zeppelin</li>
+	<li>70's music</li>
 </ul>
 
 <h3>3 things I don't like</h3>
@@ -29,8 +45,12 @@ Lord Byng. I am currently in Computer Studies 10.</p>
 </ul>
 <h3>A pretty cute dog</h3>
 <img src="dog.jpg" alt="Uh oh! The picture couldn't be displayed!" height="192" width="384">
+<h3>Here's a picture of both of my dogs!
+<p><img src="bnd1.jpg"></p>
+
+
 <h3>One of my favorite Youtube videos of all time</h3>
  
 	<p><iframe width="326" height="245" src="https://www.youtube.com/embed/nGeKSiCQkPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
+</body>
+</html>
