--- a/WEBSITE.html
+++ b/WEBSITE.html
@@ -3,20 +3,68 @@
 <html>
 
 <head>
-	<title>Grayson</title>
+	<title>Grayson's First Website</title>
 	<style>
 		h1 {
-		color: green;
+		color: blue;
+		font-size: 75pt;
+		text-align: center;
 		}
+		
+		p {
+			color: #008b00;
+			font-size: 20pt;
+			text-align: center;
+			}
+		
+		body {
+		background-color: #333333;
+		background-image: url('background.png');
+		background-repeat:
+		background-
+			}
+		h3 {
+		color: #009699;
+		font-size: 30pt;
+		txt-align: center;
+		}
+		ul {
+		color: white;
+		}
+		a {
+		color: 	#c45f00;
+		}
+		li {
+		color: 	#008b00;
+		font-size: 15pt;
+		}
+		
+		div {
+		background-color: #152238;
+		border: 10px solid green;
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: 0px;
+		padding: 40px;
+		width: 600px;
+		border-radius: 50px;
+		}
+		img {
+		border: 5px solid blue;
+		}
+		iframe {
+		border: 5px solid blue;
+		}
+
 	</style>
 </head>
 
 
 <body>
-
+<div>
 <h1>Grayson</h1>
 
-<p>Hey, I'm Grayson. I like playing video games.I also really
+<p>Hey, I'm Grayson. I like playing video games. I also really
 love dogs!</p>
 
 <p>I am a student who goes to the high school named
@@ -32,7 +80,7 @@ Lord Byng. I am currently in Computer Studies 10.</p>
 <h3>3 things I don't like</h3>
 <ul>
 	<li>English Class</li>
-	<li><font size="5" color="red">Daryan</font></li>
+	<li><font size="7">Daryan</font></li>
 	<li>People griefing my Minecraft builds</li>
 </ul>
 <h3>Links to some interesting websites</h3>
@@ -52,5 +100,6 @@ Lord Byng. I am currently in Computer Studies 10.</p>
 <h3>One of my favorite Youtube videos of all time</h3>
  
 	<p><iframe width="326" height="245" src="https://www.youtube.com/embed/nGeKSiCQkPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 </body>
 </html>
